<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/ID_EVENTO_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.6"
        android:fontFamily="sans-serif-thin"
        android:text="@string/evento_seleccionado_ID"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible">

    </TextView>

    <TextView
        android:id="@+id/num_resultados_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-thin"
        android:text="@string/resultados_evento"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/tab_indicator_text"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible">

    </TextView>

</LinearLayout>
    <SearchView
        android:id="@+id/barraFiltro"
        android:queryHint="Filtrar por sesión"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/filtroInfo_Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/datos_filtrados"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/aviso_Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="sans-serif-thin"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/aviso2_Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-thin"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/tab_indicator_text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/aviso_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="sans-serif-thin"
            android:text="@string/volver_Btn"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/id_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:paddingTop="20dp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/proveedoresListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


        </ListView>



    </LinearLayout>


</LinearLayout>